manifests/livebook/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: livebook
  namespace: livebook

spec:
  ports:
  - name: livebook-port
    port: 8080
  selector:
    app: livebook
