manifests/livebook/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livebook
  namespace: livebook
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # handy to disable for the acme initial validation
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    use-proxy-protocol: "true"
spec:
  tls:
  - hosts:
      - livebook.techsquad.rocks
    secretName: livebook-prod-tls
  rules:
  - host: livebook.techsquad.rocks
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: livebook
            port:
              number: 8080
